# opengl-training

./: .gitignore  CMakeLists.txt  README.md
AdvancedOpenGL/: CMakeLists.txt  LICENSE  README.md  Real-time graphics with OpenGL.bmpr
AdvancedOpenGL/_Lessons/: 10.Tesselation.md  10.Tessellation.md  11.GeometryShaders.md  13.ComputeShaders.md  Additional resources.txt  Real-time graphics with OpenGL.bmpr
AdvancedOpenGL/assets/shaders/: 004_passing_data.frag  005_tessellation.frag  005_tessellation.geom  005_tessellation.vert  006_fragment.frag  006_fragment_b.frag  006_fragment_b.vert  007_spinning_cube.frag  009_TextureAsData.vert  009_texture_as_data.frag  010_TextureCoordinates.frag  010_TextureCoordinates.vert  010_texture_coordinates.frag  010_texture_coordinates.vert  011_MipmapTunnel.frag  011_MipmapTunnel.vert  012_ArrayTextureAlienRain.frag  012_ArrayTextureAlienRain.vert  013_InstancedGrassBlades.frag  014_IndirectDrawAstroids.vert  015_TessellationModes.frag  015_TessellationModes.tesc  015_TessellationModes.tese  015_TessellationModes.vert  016_TerrainRendering.frag  016_TerrainRendering.tesc  016_TerrainRendering.tese  016_TerrainRendering.vert  017_ControlPoints.frag  017_ControlPoints.vert  017_CubicBezierPatches.frag  017_CubicBezierPatches.tesc  017_CubicBezierPatches.tese  017_CubicBezierPatches.vert  018_DiscardGeometry.geom  019_ModifyGeometry.frag  019_ModifyGeometry.geom  019_ModifyGeometry.vert  020_GenerateGeometry.frag  020_GenerateGeometry.geom  (+16 more)
AdvancedOpenGL/src/: main.cpp
AdvancedOpenGL/src/engine/: Assets.cpp  Assets.h  CMakeLists.txt  Color.cpp  Color.h  ComputeShader.cpp  ComputeShader.h  Game.h  GlDebug.hpp  GlUtils.hpp  InputManager.cpp  InputManager.h  Input_ControllerState.h  Input_KeyStatus.h  Input_KeyboardState.cpp  Input_MouseState.h  (+21 more)
(+1123 files in other folders)
